resolve issue #13, use java16 in gradle toolchain